# rapid-roots

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-test.yml  code_quality.yml
benchmark/: accuracy.py  functions.py
benchmark/accuracy/: _benchmark.py  _calculations.py  _plot.py  main.py
benchmark/shared/: _generate.py  _run_benchmark.py  functions.py
benchmark/throughput/: _benchmark.py  _plot.py  main.py
numerical_solvers/solvers/: __init__.py  _back_up_logic.py  _codegen.py  _enums.py  _jit_solvers.py  _solvers.py  _types.py  _types_and_maps.py  core.py
rapid_roots/solvers/: _codegen.py
src/rapid_roots/shared/: _enum_tools.py
src/rapid_roots/solvers/: __init__.py  _back_up_logic.py  _codegen.py  _jit_solvers.py  _solvers.py  _types.py  core.py
tests/: _back_up_bracket_vectorised.py  _back_up_open_vectorised.py  _back_up_scalar_test.py  _bisection_vectorised_test.py  _brent_vectorised_test.py  _codegen_test.py  _create_substitute_test.py  _jit_solvers_scalar_test.py  _jit_solvers_vectorised_test.py  _newton_raphson_vectorised_test.py  _params_validate_test.py  _solvers_test.py  _try_back_up_vectorised.py  _use_backup_solvers_test.py  get_root_test.py  test_back_up_bracket_vectorised.py  test_back_up_open_vectorised.py  test_back_up_scalar.py  test_bisection_vectorised.py  test_brent_vectorised.py  test_codegen.py  test_core_get_root.py  test_create_substitute.py  test_jit_solvers_scalar.py  test_newton_raphson_vectorised.py  test_params_validate.py  test_solvers.py  test_try_back_up_vectorised.py  test_use_backup_solvers.py
