[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid-roots"
version = "0.1.0"
description = "Numba optimised numerical root-finding solvers for multiple data points"
readme = "README.md"
requires-python = ">=3.9"
license = {text="MIT"}
authors = [
    {name = "Cian Quezon", email = "cdsquezon@gmail.com"}
]
maintainers = [
    {name = "Cian Quezon", email = "cdsquezon@gmail.com"}
]

keywords = [
    "root-finder",
    "root-solver",
    "newton-raphson",
    "numba",
    "vectorised",
    "scientific-computing",
    "equation-solver",
    "brent",
    "bisection",
    "optimisation",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.20.0",
    "numba>=0.55.0",
]


[project.optional-dependencies]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "scipy>=1.9.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]


test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scipy>=1.9.0"
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]


[project.urls]
Homepage = "https://github.com/CianQuezon/rapid-roots"
Repository = "https://github.com/CianQuezon/rapid-roots"
Documentation = "https://github.com/CianQuezon/rapid-roots#readme"
Issues = "https://github.com/CianQuezon/rapid-roots/issues"
Changelog = "https://github.com/CianQuezon/rapid-roots/releases"

[tool.setuptools]
packages = ["rapid_roots", "rapid_roots.solvers"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
rapid_roots = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",  
]

precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"


[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]  # Allow assert and unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

